LATEST VERSION
-----------------------------
- Cannot copy xtf path to log path anymore (#321)
- check uniqueness of TIDs across the whole file (ilivalidator#320)
- validate that an embedded association is not encoded as a standalone link object
- support custom IoxReaders
- iox-ili-1.21.8-SNAPSHOT

ilivalidator 1.11.11 (2020-09-13)
-----------------------------
- Remember dialog size and location (#247)
- --check-repo-data continues validation (#314)
- drag and drop for data files (#230)
- new tab "Hilfe" (#279)
- reference attrs in sub-structures are not validated (#319)
- XMLDate has to be checked stronger (YYYY-MM-DD) (#197)
- ilidata repo tools:  use proxy settings
- ili2c-5.2.3
- iox-ili-1.21.7

ilivalidator 1.11.10 (2020-04-30)
-----------------------------
- implement INTERLIS RunTimeParameterDef (#221) 
- remove static reference to GUI (Swing) classes from Main class (#265)
- support Ahead-of-Time ilivalidator extension functions (#222)
- report tids/attrpath in areAreas() function (#241)
- added native-image config
- iox-ili-1.21.6
- ili2c-5.2.2
- ehibasics-1.4.1
- iox-api-1.0.4

ilivalidator 1.11.9 (2020-12-28)
-----------------------------
- fix check-repo-data fails with java.io.FileNotFoundException (#291)
- fix --createIliData fails with NPE if file in base folder (#292)
- Log-Faehigkeit der INTERLIS.areArea()-Funktion (#240)
- ili2c-5.1.5
- iox-ili-1.21.4

ilivalidator 1.11.8 (2020-10-02)
-----------------------------
- fix java.io.NotSerializableException (#280)
- ili2c-5.1.4
- iox-ili-1.21.3

ilivalidator 1.11.7 (2020-09-29)
-----------------------------
- ili2c-5.1.3
- iox-ili-1.21.2
- log --modeldir value as modeldir (#256) 
- Overlaying AREA not detected (#263)
- ignore polygon building errors if defaultGeometryTypeValidation="off"
- improve error messages in INI-file parsing (#271)
- wrongly reports duplicate TIDs (#266)
- Attempting to disable geometry validation with no success (#272)

ilivalidator 1.11.6 (2020-05-01)